flux/apps/pihole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/issuer-group: cert-manager.io
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer: thecluster.lan
spec:
  ingressClassName: haproxy
  rules:
    - host: pihole-a.thecluster.lan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-a-web
                port:
                  name: http
    - host: pihole-b.thecluster.lan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-b-web
                port:
                  name: http
  tls:
    - secretName: pihole-tls
      hosts:
        - pihole-a.thecluster.lan
        - pihole-b.thecluster.lan
